# position-helper

./: .env.local.example  .gitignore  .stitch-project.json  .tmp_emoji_scan.py  251207_Position_data.json  251214_Position_data.json  ANTIGRAVITY.md  DESIGN_SYSTEM.md  PRD.md  README.md  app_dash.py  charts.md  components.json  data.json  implementation_plan.md  index.html  netlify.toml  next.config.js  package-lock.json  package.json  readme.md  requirements.txt  rules.md  task.md  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  walkthrough.md  일단최신화 - 25.12.18.json
.agent/: plan.json
.agent/rules/: agents.md  hooks.md
.agent/workflows/: architect.md  build-error-resolver.md  build-fix.md  checkpoint.md  code-review.md  code-reviewer.md  database-reviewer.md  doc-updater.md  e2e-runner.md  e2e.md  eval.md  evolve.md  go-build-resolver.md  go-build.md  go-review.md  go-reviewer.md  go-test.md  instinct-export.md  instinct-import.md  instinct-status.md  learn.md  orchestrate.md  plan.md  planner.md  refactor-clean.md  refactor-cleaner.md  security-reviewer.md  setup-pm.md  tdd-guide.md  (+6 more)
app/: globals.css  layout.tsx  page.tsx  template.tsx
assets/: 00-base.css  clientside.js  styles.css  zz-dark.css
docs/: DELETION_LOG.md  DEVELOPMENT.md  PROJECT_PLAYBOOK.md  WORKFLOW_GUIDE.md  assignment_alert_system.md  motion-guidelines.md  theme-guidelines.md
positiondatalog/: 260104_Position_data (1).json
public/: _redirects
src/: App.tsx  App.vue  main.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
utils/: dataframes.py
(+202 files in other folders)
